--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "angular": "~1.2.20",
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "mapbox.js": "~2.0.0",
+    "leaflet": "~0.7.3"
   }
 }
