--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "gulp-livereload": "~2.1.0",
-    "gulp": "~3.8.6"
+    "gulp": "~3.8.6",
+    "gulp-connect": "~2.0.6"
   }
 }
