--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "gulp-livereload": "~2.1.0",
     "gulp": "~3.8.6",
-    "gulp-connect": "~2.0.6"
+    "gulp-connect": "~2.0.6",
+    "gulp-concat": "~2.3.4",
+    "gulp-jshint": "~1.8.4",
+    "gulp-less": "~1.3.3"
   }
 }
