--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular": "~1.2.20",
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-bootstrap": "~0.11.0"
   }
 }
